objects/Prevailing_Wage_Setup__c/Prevailing_Wage_Setup__c.object-meta.xml
<CustomObject>
    <label>Prevailing Wage Setup</label>
    <nameField>
        <displayFormat>PWS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prevailing Wage Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>