objects/Prevailing_Wage_Setup__c/fields/PW_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>PW_Job_Type__c</fullName>
    <label>PW Job Type Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>