objects/Prevailing_Wage_Setup__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_PW_Rate__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>