objects/Prevailing_Wage_Setup__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Resource_Type__c.Category__c</field>
            <operation>equals</operation>
            <value>Labor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Prevailing Wage Setups</relationshipLabel>
    <relationshipName>Prevailing_Wage_Setups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>