objects/Prevailing_Wage_Setup__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Sales Order is not a Prevailing Wage Sales Order!</errorMessage>
        <filterItems>
            <field>Sales_Order__c.Prevailing_Wage_Job__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Prevailing Wage Setups</relationshipLabel>
    <relationshipName>Prevailing_Wage_Setups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>