objects/Prevailing_Wage_Setup__c/fields/Show_PW_Rate__c.field-meta.xml
<CustomField>
    <fullName>Show_PW_Rate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show PW Rate</label>
    <type>Checkbox</type>
</CustomField>